// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt can be configured at the parameter level > prompt when invalid input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt can be configured at the parameter level > prompt when invalid input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m",
  "foo",
  "
",
]
`;

exports[`prompt can be configured at the parameter level > prompt when invalid input > tty strip ansi 1`] = `
[
  "1/1  a",
  "foo",
  "
",
]
`;

exports[`prompt can be configured at the parameter level > prompt when invalid input OR missing input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt can be configured at the parameter level > prompt when invalid input OR missing input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m",
  "foo",
  "
",
]
`;

exports[`prompt can be configured at the parameter level > prompt when invalid input OR missing input > tty strip ansi 1`] = `
[
  "1/1  a",
  "foo",
  "
",
]
`;

exports[`prompt can be configured at the parameter level > prompt when missing input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt can be configured at the parameter level > prompt when missing input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m",
  "foo",
  "
",
]
`;

exports[`prompt can be configured at the parameter level > prompt when missing input > tty strip ansi 1`] = `
[
  "1/1  a",
  "foo",
  "
",
]
`;
